--- a/_includes/landing_page_pbvo/o_que_e.html
+++ b/_includes/landing_page_pbvo/o_que_e.html
@@ -6,10 +6,18 @@
             </div>
 
             <div class="media-content">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">O que é o Projeto Lar Bonito Lar?</h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">O que é o Projeto Bem Viver Organizada??</h1>
                 
                 <div class="mbr-section-text mbr-white pb-3 ">
-                    <p class="mbr-text mbr-fonts-style display-7">O Projeto Lar Bonito Lar oferece o conhecimento básico e necessário para você finalmente perceber sua rotina fluindo de maneira mais leve. Esse conhecimento, entretanto, precisa ser compreendido e adaptado à sua dinâmica familiar, e consistentemente praticado para se tornar um hábito de maneira definitiva. O Projeto Lar Bonito Lar foi pensado para facilitar a sua vida nesse sentido. Através dele sua ficha vai cair: o problema não é a casa e suas demandas, mas sim o fato de que não aprendemos a lidar de maneira organizada e mais leve com esse tipo de trabalho. <br><br>O conhecimento a que você precisa ter acesso será transmitido de maneira bastante didática, através de contato diário num grupo de whatsapp vip, com no máximo 15 mulheres, com regras de comportamento e condutas, o que garante a interação necessária para o sucesso no alcance de seu objetivo, com partilha de experiências, dificuldades e dúvidas, mas num volume de mensagens que não vão te incomodar, na medida certa para te impulsionar e inspirar a partir para a ação, e fazer acontecer!&nbsp;</p>
+                    <p class="mbr-text mbr-fonts-style display-7">O Projeto Bem Viver Organizada oferece o conhecimento básico para você começar a ter mais organização pessoal, e finalmente perceber que você está tendo mais qualidade
+                        de vida, porque ela estará mais alinhada com suas prioridades. O Projeto Bem Viver
+                        Organizada foi pensado para orientar você sobre como planejar o seu dia a dia, e
+                        organizar seus afazeres dentro de um fluxo de organização que te permita gerenciar
+                        melhor o seu tempo, focando no que é mais importante para você. Através desse
+                        aprendizado você vai compreender que o problema não está no volume de demandas
+                        que você recebe diariamente, porque isso vai sempre existir, e não temos controle algum
+                        sobre ele, mas na forma errada de lidar com as demandas que chegam da vida para a
+                        gente. Vamos aprender juntas sobre isso?</p>
                 </div>
                 
             </div>
