--- a/_includes/landing_page_pbvo/head_video.html
+++ b/_includes/landing_page_pbvo/head_video.html
@@ -10,12 +10,12 @@
         <div class="row justify-content-md-center">
             <div class="media-content col-md-10">
                 <h1 class="mbr-section-title align-center mbr-white  mbr-bold mbr-fonts-style display-2">
-                  Saiba o melhor passo a&nbsp;passo da gestão do lar, para que você ganhe tranquilidade e tempo no dia a dia.&nbsp;
+                    Aprenda a redirecionar o seu tempo para o que é mais importante através da organização pessoal, realize as coisas que deseja ver acontecer, e identifique o que realmente merece sua atenção no dia a dia.
                 </h1>
 
                 <div class="mbr-text align-center mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-5">
-                        Se organizar para cuidar de sua casa vai fazer você mudar sua relação com seu lar.
+                       ????? Se organizar para cuidar de sua casa vai fazer você mudar sua relação com seu lar.  ????
                     </p>
                 </div>
             </div>
