--- a/_layouts/landing_page_pbvo.html
+++ b/_layouts/landing_page_pbvo.html
@@ -5,23 +5,23 @@
       prefix="og: http://ogp.me/ns#" >
 <head>
 
-	{% include landing_page_plbl/head.html %} 
+	{% include landing_page_pbvo/head.html %} 
 
 </head>
     
 
 <body>
 
-      {% include landing_page_plbl/head_video.html %}
-      {% include landing_page_plbl/inscrever.html %}	
-      {% include landing_page_plbl/garantia.html %}
-      {% include landing_page_plbl/depoimentos_texto.html %}
-      {% include landing_page_plbl/o_que_e.html %}
-      {% include landing_page_plbl/o_que_vai_aprender.html %}
-      {% include landing_page_plbl/faq.html %}
-      {% include landing_page_plbl/inscrever.html %}		
-      {% include landing_page_plbl/perfil.html %}
-      {% include landing_page_plbl/scripts.html %}	
+      {% include landing_page_pbvo/head_video.html %}
+      {% include landing_page_pbvo/inscrever.html %}	
+      {% include landing_page_pbvo/garantia.html %}
+      {% include landing_page_pbvo/depoimentos_texto.html %}
+      {% include landing_page_pbvo/o_que_e.html %}
+      {% include landing_page_pbvo/o_que_vai_aprender.html %}
+      {% include landing_page_pbvo/faq.html %}
+      {% include landing_page_pbvo/inscrever.html %}		
+      {% include landing_page_pbvo/perfil.html %}
+      {% include landing_page_pbvo/scripts.html %}	
 	
 
 </body>
