--- a/_includes/landing_page_pbvo/perfil.html
+++ b/_includes/landing_page_pbvo/perfil.html
@@ -14,13 +14,13 @@
             </div>
             <div class="media-content px-3 align-self-center mbr-white py-2">
                     <p class="mbr-text testimonial-text mbr-fonts-style display-7">
-                       Eu vou te mostrar que gerenciar o seu tempo nas demandas da casa é mais simples do que você imagina, e que com informação e organização, dá para cuidar de seu lar com mais leveza. Você vai aprender o passo a passo para ter tranquilidade e mais tempo no dia a dia, tudo para que você possa se dedicar ao que mais importa: família, trabalho, projetos pessoais.
+                        Eu vou te mostrar que gerenciar o seu tempo é mais simples do que você imagina, e que com informação e organização, dá para cuidar de sua vida com mais leveza. Você vai aprender o passo a passo para ter tranquilidade e mais tempo no dia a dia, tudo para que você possa se dedicar ao que mais importa: família, trabalho, projetos pessoais.
                     </p>
                     <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7">
                        Lidiane Vasconcelos
                     </p>
                     <p class="mbr-author-desc mbr-fonts-style display-7">
-                       Criadora do Projeto Lar Bonito Lar
+                       Criadora do Projeto Bem Viver Organizada
                     </p>
             </div>
         </div>
