--- a/_includes/landing_page_pbvo/faq.html
+++ b/_includes/landing_page_pbvo/faq.html
@@ -23,7 +23,8 @@
                             <div id="collapse1_44" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">
-                                       A entrega do conteúdo acontece durante 30 dias, uma porção diária, via whatsapp. Você acessa esse conteúdo na sua disponibilidade de tempo. De qualquer forma o conteúdo que você recebe fica a sua disposição indefinidamente, no seu whatsapp. </p>
+                                        A entrega do conteúdo acontece durante 30 dias, via whatsapp, e você acessa esse conteúdo na sua disponibilidade de tempo. De qualquer forma o conteúdo que você recebe fica a sua disposição indefinidamente, no seu whatsapp.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -38,7 +39,8 @@
                             <div id="collapse2_44" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">
-                                       Estruturação de rotina diária com tarefas essenciais para manter sua casa de pé com leveza, identificação de focos essenciais para ter a vida pessoal mais organizada, planejamento de manutenção de limpeza continuada para evitar sobrecarga nesse tipo de trabalho.   </p>
+                                        Estruturação de rotina diária com tarefas essenciais para ter a vida mais organizada, planejamento de atividades para se manter produtiva no dia a dia, fazendo o que é mais importante para você, e sem sobrecarga.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -51,7 +53,9 @@
                             </div>
                             <div id="collapse3_44" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
-                                    <p class="mbr-fonts-style panel-text display-7">O conteúdo é gravado em áudio, dividido por passos, focos e temas. Diariamente é entregue via whatsapp, imagem e áudio. </p>
+                                    <p class="mbr-fonts-style panel-text display-7">
+                                        O conteúdo é gravado em áudio, dividido por passos de aprendizado. Diariamente é entregue via whatsapp, imagem e áudio.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -65,7 +69,8 @@
                             <div id="collapse4_44" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">
-                                       Sim, se você iniciar o curso e avaliar que ele não é para você, basta pedir seu dinheiro de volta até 7 dias do início do curso.</p>
+                                        Sim, se você iniciar o curso e avaliar que ele não é para você, basta pedir seu dinheiro de volta em até 7 dias do início do curso.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -79,7 +84,8 @@
                             <div id="collapse5_44" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">
-                                       O investimento é de R$ 59,00. </p>
+                                       O investimento é de R$ 59,00. 
+                                    </p>
                                 </div>
                             </div>
                         </div>
