--- a/_includes/landing_page_pbvo/o_que_e.html
+++ b/_includes/landing_page_pbvo/o_que_e.html
@@ -6,10 +6,11 @@
             </div>
 
             <div class="media-content">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">O que é o Projeto Bem Viver Organizada??</h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">O que é o Projeto Bem Viver Organizada?</h1>
                 
                 <div class="mbr-section-text mbr-white pb-3 ">
-                    <p class="mbr-text mbr-fonts-style display-7">O Projeto Bem Viver Organizada oferece o conhecimento básico para você começar a ter mais organização pessoal, e finalmente perceber que você está tendo mais qualidade
+                    <p class="mbr-text mbr-fonts-style display-7">O Projeto Bem Viver Organizada oferece o conhecimento 
+                        básico para você começar a ter mais organização pessoal, e finalmente perceber que você está tendo mais qualidade
                         de vida, porque ela estará mais alinhada com suas prioridades. O Projeto Bem Viver
                         Organizada foi pensado para orientar você sobre como planejar o seu dia a dia, e
                         organizar seus afazeres dentro de um fluxo de organização que te permita gerenciar
@@ -17,7 +18,8 @@
                         aprendizado você vai compreender que o problema não está no volume de demandas
                         que você recebe diariamente, porque isso vai sempre existir, e não temos controle algum
                         sobre ele, mas na forma errada de lidar com as demandas que chegam da vida para a
-                        gente. Vamos aprender juntas sobre isso?</p>
+                        gente. Vamos aprender juntas sobre isso?
+                    </p>
                 </div>
                 
             </div>
