--- a/_layouts/landing_page_pbvo.html
+++ b/_layouts/landing_page_pbvo.html
@@ -15,7 +15,7 @@
       {% include landing_page_pbvo/head_video.html %}
       {% include landing_page_pbvo/inscrever.html %}	
       {% include landing_page_pbvo/garantia.html %}
-      {% include landing_page_pbvo/depoimentos_texto.html %}
+<!--      {% include landing_page_pbvo/depoimentos_texto.html %} -->
       {% include landing_page_pbvo/o_que_e.html %}
       {% include landing_page_pbvo/o_que_vai_aprender.html %}
       {% include landing_page_pbvo/faq.html %}
