--- a/_includes/landing_page_pbvo/head.html
+++ b/_includes/landing_page_pbvo/head.html
@@ -3,7 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="/assets/images/logo2.png" type="image/x-icon">
 
-  <title>Projeto Lar Bonito Lar</title>
+  <title>Projeto Bem Viver Organizada</title>
 
   <link rel="stylesheet" href="/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="/assets/tether/tether.min.css">
