--- a/_includes/landing_page_pbvo/o_que_vai_aprender.html
+++ b/_includes/landing_page_pbvo/o_que_vai_aprender.html
@@ -5,12 +5,10 @@
         <div class="media-container-row">
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 <ol>
-                    <li><strong>Foco no essencial</strong> - Você vai aprender a administrar melhor o tempo dedicado às demandas da casa</li>
-                    <li><strong>Simplicidade e eficiência</strong> - Você vai montar um fluxo de organização eficiente que te ajude nesse trabalho</li>
-                    <li><strong>Organização pessoal</strong> - Você vai aprender a se organizar em outros aspectos importantes na sua vida, e não apenas na gestão do lar, que vão te conectar com o que de fato importa</li>
-                    <li><strong>Mais que casa, um lar</strong> - Você vai se sentir mais relaxada em sua casa, reduzindo o seu estresse</li>
-                    <li><strong>Tempo para você</strong> - Você vai ser uma mulher que se preocupa menos com as demandas da casa, porque saberá que existe um planejamento que te orienta na execução das tarefas de maneira organizada, sem sobrecarga, e cada coisa no tempo certo</li>
-                    <li><strong>Autocuidado</strong> - Você vai se sentir mais tranquila e leve, porque terá mudado a forma como sente a relação com o trabalho ligado ao seu lar</li>
+                    <li><strong> ??? Foco no essencial ???</strong> - Construir rotinas e processos para ter mais controle de suas atividades</li>
+                    <li><strong> ??? Simplicidade e eficiência ???</strong> - Priorizar seus afazeres de acordo com o que é mais importante para você</li>
+                    <li><strong> ??? Organização pessoal ??? </strong> - Organizar suas atividades nos lugares corretos, e no momento mais adequado para fazer isso</li>
+                    <li><strong> ??? Mais que casa, um lar ??? </strong> - Realizar planejamentos que te permitirão manter a produtividade no dia a dia</li>
                 </ol>
             </div>
         </div>
