--- a/_includes/landing_page_pbvo/head_video.html
+++ b/_includes/landing_page_pbvo/head_video.html
@@ -10,21 +10,21 @@
         <div class="row justify-content-md-center">
             <div class="media-content col-md-10">
                 <h1 class="mbr-section-title align-center mbr-white  mbr-bold mbr-fonts-style display-2">
-                    Aprenda a redirecionar o seu tempo para o que é mais importante através da organização pessoal, realize as coisas que deseja ver acontecer, e identifique o que realmente merece sua atenção no dia a dia.
+                    Aprenda a redirecionar o seu tempo para o que é mais importante através da organização pessoal.
                 </h1>
 
                 <div class="mbr-text align-center mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-5">
-                       ????? Se organizar para cuidar de sua casa vai fazer você mudar sua relação com seu lar.  ????
+                        Realize as coisas que deseja ver acontecer, e identifique o que realmente merece sua atenção no dia a dia.
                     </p>
                 </div>
             </div>
             <div class="mbr-figure">
-                <!-- <img src="/assets/images/imagem-landingpage-648-1024x648.png" alt="" title="" style="width: 75%;"> -->
+                 <img src="/assets/images/imagem-landingpage-648-1024x648.png" alt="" title="" style="width: 75%;"> 
                 <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/a6XfiBKAzR4?cc_load_policy=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                 <!-- <iframe width="640" height="360" src="https://www.youtube.com/embed/a6XfiBKAzR4?controls=0?cc_load_policy=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                 <!-- <iframe src="https://player.vimeo.com/video/345265624?texttrack=pt-br" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
-                <iframe src="https://player.vimeo.com/video/345343755" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                <!-- <iframe src="https://player.vimeo.com/video/345343755" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
             </div>
         </div>
     </div>
