--- a/_includes/landing_page_pbvo/o_que_vai_aprender.html
+++ b/_includes/landing_page_pbvo/o_que_vai_aprender.html
@@ -3,10 +3,10 @@
         <div class="media-container-row">
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 <ol>
-                    <li>Construir rotinas e processos para ter mais controle de suas atividades</li>
-                    <li>Priorizar seus afazeres de acordo com o que é mais importante para você</li>
+                    <li>Construir rotinas e processos para ter mais controle de suas atividades                  .</li>
+                    <li>Priorizar seus afazeres de acordo com o que é mais importante para você                  .</li>
                     <li>Organizar suas atividades nos lugares corretos, e no momento mais adequado para fazer isso</li>
-                    <li>Realizar planejamentos que te permitirão manter a produtividade no dia a dia</li>
+                    <li>Realizar planejamentos que te permitirão manter a produtividade no dia a dia             .</li>
                 </ol>
             </div>
         </div>
