--- a/_includes/landing_page_pbvo/head_video.html
+++ b/_includes/landing_page_pbvo/head_video.html
@@ -20,11 +20,11 @@
                 </div>
             </div>
             <div class="mbr-figure">
-                 <img src="/assets/images/imagem-landingpage-648-1024x648.png" alt="" title="" style="width: 75%;"> 
+                <!--  <img src="/assets/images/imagem-landingpage-648-1024x648.png" alt="" title="" style="width: 75%;"> -->
                 <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/a6XfiBKAzR4?cc_load_policy=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                 <!-- <iframe width="640" height="360" src="https://www.youtube.com/embed/a6XfiBKAzR4?controls=0?cc_load_policy=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                 <!-- <iframe src="https://player.vimeo.com/video/345265624?texttrack=pt-br" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
-                <!-- <iframe src="https://player.vimeo.com/video/345343755" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
+                <iframe src="https://player.vimeo.com/video/345343755" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> 
             </div>
         </div>
     </div>
