--- a/_includes/landing_page_pbvo/inscrever.html
+++ b/_includes/landing_page_pbvo/inscrever.html
@@ -8,7 +8,7 @@
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
                 <div class="mbr-section-btn align-center">
-                  <a class="btn btn-primary display-4" href="https://wa.me/5581995307307?text=Quero%20me%20inscrever%20no%20Projeto%20Lar%20Bonito%20Lar">
+                  <a class="btn btn-primary display-4" href="https://wa.me/5581995307307?text=Quero%20me%20inscrever%20no%20Projeto%20Bem%20Viver%20Organizada">
                     SIM, QUERO ME INSCREVER!
                   </a>
                 </div>
