--- a/_includes/landing_page_pbvo/o_que_vai_aprender.html
+++ b/_includes/landing_page_pbvo/o_que_vai_aprender.html
@@ -1,6 +1,14 @@
 <section class="mbr-section article content11 cid-rbK31YifLN" id="content11-1p">
     <div class="container">
         <div class="media-container-row">
+            <div class="title col-12 align-center">
+                <h2 class="mbr-fonts-style display-1">Testado e aprovado!</h2>
+                <h3 class="mbr-section-subtitle mbr-light mbr-fonts-style display-2">Confira o que diz quem participou dessa vivência:</h3>
+            </div>
+        </div>
+    </div>    
+    <div class="container">
+        <div class="media-container-row">
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 <ol>
                     <li>Construir rotinas e processos para ter mais controle de suas atividades</li>
