--- a/_includes/landing_page_pbvo/o_que_vai_aprender.html
+++ b/_includes/landing_page_pbvo/o_que_vai_aprender.html
@@ -2,8 +2,10 @@
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 align-center">
-                <h2 class="mbr-fonts-style display-1">Testado e aprovado!</h2>
-                <h3 class="mbr-section-subtitle mbr-light mbr-fonts-style display-2">Confira o que diz quem participou dessa vivência:</h3>
+                <!--<h2 class="mbr-fonts-style display-1">Testado e aprovado!</h2> -->
+                <h3 class="mbr-section-subtitle mbr-light mbr-fonts-style display-2">
+                    Quando seu Projeto Bem Viver Organizada estiver sendo implementado, você vai:
+                </h3>
             </div>
         </div>
     </div>    
