--- a/_includes/landing_page_pbvo/o_que_e.html
+++ b/_includes/landing_page_pbvo/o_que_e.html
@@ -20,10 +20,13 @@
                         sobre ele, mas na forma errada de lidar com as demandas que chegam da vida para a
                         gente. Vamos aprender juntas sobre isso?
                     </p>
-                </div>
-                
+                    <p class="mbr-text mbr-fonts-style display-7">O conteúdo será entregue para você de forma simples e didática, através de áudios em
+                        um grupo fechado e limitado a 15 mulheres no Whatsapp, com regras de
+                        comportamento e conduta, o que garante que o foco seja no aprendizado durante o
+                        projeto.
+                    </p>
+                </div>  
             </div>
         </div>
     </div>
-
 </section>
