--- a/_layouts/landing_page_pbvo.html
+++ b/_layouts/landing_page_pbvo.html
@@ -11,8 +11,10 @@
     
 
 <body>
-
-      {% include landing_page_pbvo/head_video.html %}
+      {% include landing_page_pbvo/head.html %}
+      {% comment %} 
+	     {% include landing_page_pbvo/head_video.html %}
+      {% endcomment %}	
       {% include landing_page_pbvo/inscrever.html %}	
       {% include landing_page_pbvo/garantia.html %}
       {% comment %} 
