--- a/_includes/post_links.html
+++ b/_includes/post_links.html
@@ -2,7 +2,14 @@
 <div class="article-post">
   </br>
   <p style="text-align: center;"><strong>Nossos Links:</strong></p>
-  <p style="text-align: center;"><a title="Projeto Lar Bonito Lar" href="https://www.lidianevasconcelos.com/Projeto-Lar-Bonito-Lar/">Projeto Lar Bonito Lar</a> | <a title="Facebook" href="https://www.facebook.com/Vasconcelos.Lidi/">Facebook</a> | <a title="Instagram" href="https://www.instagram.com/vasconcelos.lidi/">Instagram</a><br /><br /></p>
+  <p style="text-align: center;">
+    <a title="Projeto Lar Bonito Lar" href="https://www.lidianevasconcelos.com/Projeto-Lar-Bonito-Lar/">Projeto Lar Bonito Lar</a> | 
+    <a title="Projeto Bem Viver Organizada" href="https://www.lidianevasconcelos.com/Projeto-Bem-Viver-Organizada/">Projeto Bem Viver Organizada</a> | 
+    <a title="Facebook" href="https://www.facebook.com/Vasconcelos.Lidi/">Facebook</a> | 
+    <a title="Instagram" href="https://www.instagram.com/vasconcelos.lidi/">Instagram</a>
+    <br />
+    <br />
+  </p>
  <!--
   <p style="text-align: center;"><strong>Cadastre seu email e receba sua newsletter gratuitamente.</strong>
   <form style="text-align: center;" action="https://getsimpleform.com/messages?form_api_token=97ae79eeaf7eef692a2a759aa30bea5a" method="post">
