--- a/_includes/landing_page_plbl/faq.html
+++ b/_includes/landing_page_plbl/faq.html
@@ -51,7 +51,7 @@
                             </div>
                             <div id="collapse3_44" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
-                                    <p class="mbr-fonts-style panel-text display-7">O conteúdo é gravado em áudio, dividido por passos, focos e temas. Diariamente é entregue via whatsapp, imagem e áudio. </p>
+                                    <p class="mbr-fonts-style panel-text display-7">O conteúdo é gravado em áudio, dividido por passos, focos e temas. Diariamente é entregue via whatsapp, imagem e áudio. Além do mais, material de acompanhamento, em PDF, entregue no início do projeto, e outro no final.</p>
                                 </div>
                             </div>
                         </div>
