--- a/_layouts/landing_page_plbl.html
+++ b/_layouts/landing_page_plbl.html
@@ -11,8 +11,10 @@
     
 
 <body>
-
-      {% include landing_page_plbl/head_video.html %}
+      {% comment %} 
+            {% include landing_page_plbl/head_video.html %} 
+      {% endcomment %}	
+      {% include landing_page_plbl/head.html %}
       {% include landing_page_plbl/inscrever.html %}	
       {% include landing_page_plbl/garantia.html %}
       {% include landing_page_plbl/depoimentos_texto.html %}
