--- a/_includes/landing_page_pbvo/faq.html
+++ b/_includes/landing_page_pbvo/faq.html
@@ -54,7 +54,7 @@
                             <div id="collapse3_44" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">
-                                        O conteúdo é gravado em áudio, dividido por passos de aprendizado. Diariamente é entregue via whatsapp, imagem e áudio.
+                                        O conteúdo é gravado em áudio, dividido por passos de aprendizado. Diariamente é entregue via whatsapp, imagem e áudio. Além do mais, material de acompanhamento, em PDF, entregue no início do projeto, e outro no final.
                                     </p>
                                 </div>
                             </div>
