--- a/_includes/post_links.html
+++ b/_includes/post_links.html
@@ -13,7 +13,7 @@
  <!--
   <p style="text-align: center;"><strong>Cadastre seu email e receba sua newsletter gratuitamente.</strong>
   <form style="text-align: center;" action="https://getsimpleform.com/messages?form_api_token=97ae79eeaf7eef692a2a759aa30bea5a" method="post">
-    <input type='hidden' name='redirect_to' value='https://www.trololodemulher.com.br/Obrigado-por-Assinar-a-Newsletter/' />
+    <input type='hidden' name='redirect_to' value='https://www.lidianevasconcelos.com/Obrigado-por-Assinar-a-Newsletter/' />
     <input type="text"  name="email"  placeholder="Email" >
     <input class="btn btn-primary display-4" type="submit" value='ASSINE' role="button" />
   </form></p>
