--- a/_includes/post_newsletter.html
+++ b/_includes/post_newsletter.html
@@ -4,7 +4,7 @@
     <p>Cadastre seu email e receba sua newsletter gratuitamente.</p>
     <form action="//{{ site.mailchimp }}" method="post"  target="_blank" novalidate>
     <form action="https://getsimpleform.com/messages?form_api_token=97ae79eeaf7eef692a2a759aa30bea5a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate">
-      <input type='hidden' name='redirect_to' value='https://www.trololodemulher.com.br/Obrigado-por-Assinar-a-Newsletter/' />
+      <input type='hidden' name='redirect_to' value='https://www.lidianevasconcelos.com/Obrigado-por-Assinar-a-Newsletter/' />
       <label class="screen-reader-text" for="mce-EMAIL">Email</label>
       <div class="newsletter-box" id="mc_embed_signup_scroll">
         <input type="text" name="email" placeholder="Email" class="email-input" id="mce-EMAIL" required>
