--- a/_includes/post_links.html
+++ b/_includes/post_links.html
@@ -10,6 +10,7 @@
     <br />
     <br />
   </p>
+{% comment %}   
  <!--
   <p style="text-align: center;"><strong>Cadastre seu email e receba sua newsletter gratuitamente.</strong>
   <form style="text-align: center;" action="https://getsimpleform.com/messages?form_api_token=97ae79eeaf7eef692a2a759aa30bea5a" method="post">
@@ -18,4 +19,5 @@
     <input class="btn btn-primary display-4" type="submit" value='ASSINE' role="button" />
   </form></p>
 -->
+{% endcomment %} 
 </div>
