--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,15 @@
 layout: compress
 ---
 <!DOCTYPE html>
+{% if page.id%}
 <html lang="{{ site.content_lang }}"
       itemscope 
       itemtype="http://schema.org/Article" 
       prefix="og: http://ogp.me/ns#" >
+{% else %}    
+<html lang="{{ site.content_lang }}"
+      prefix="og: http://ogp.me/ns#" >
+{% endif %}  
 <head>
    {% include head.html %}   	 
 </head>
